--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,13 @@
     "plugin:jsx-a11y/recommended",
     "prettier"
   ],
+  "plugins" : ["react","import","jsx-a11y","react-hooks"],
   "rules":{
     "react/prop-types": 0,
-    "no-console": 1
+    "no-console": 1,
+    "react-hooks/rules-of-hooks": 2,
+    "react-hooks/exhaustive-deps": 1
   },
-  "plugins" : ["react","import","jsx-a11y"],
   "parserOptions":{
     "ecmaVersion": 2018,
     "sourceType" : "module",
