--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "adopt-me",
   "version": "1.0.0",
   "description": "React Adoption app",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "dev": "parcel src/index.html",
+    "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,6 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -30,13 +32,22 @@
   },
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
+    "@reach/router": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 ChromeAndroid versions",
+    "last 2 Firefox versions",
+    "last 2 FirefoxAndroid versions",
+    "last 2 Edge versions"
+  ],
   "resolutions": {
     "postcss": "^8.2.10",
     "glob-parent": "^5.1.2",
     "css-what": "^5.0.1",
-    "normalize-url": "^4.5.1"
+    "normalize-url": "^4.5.1",
+    "axios": "^0.21.1"
   }
 }
