--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "React Adoption app",
   "main": "App.js",
   "scripts": {
+    "build": "parcel build --public-url ./dist/ src/index.html",
+    "start": "npm run build && babel-node server/index.js",
+    "server": "babel-node server/index.js",
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "npx npm-force-resolutions"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -35,8 +37,11 @@
     "prettier": "^2.3.1"
   },
   "dependencies": {
+    "@babel/node": "^7.14.5",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.4",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -46,12 +51,5 @@
     "last 2 Firefox versions",
     "last 2 FirefoxAndroid versions",
     "last 2 Edge versions"
-  ],
-  "resolutions": {
-    "postcss": "^8.2.10",
-    "glob-parent": "^5.1.2",
-    "css-what": "^5.0.1",
-    "normalize-url": "^4.5.1",
-    "axios": "^0.21.1"
-  }
+  ]
 }
