--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4"
   },
   "browserslist": [
     "last 2 Chrome versions",
