--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,7 @@
   "env":{
     "es6":true,
     "browser": true,
-    "node": true,
-    "jest" : true
+    "node": true
   },
   "settings":{
     "react":{
