--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "jest --env=jsdom"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -33,10 +33,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.0.4",
     "parcel-bundler": "^1.12.5",
-    "prettier": "^2.3.1",
-    "react-testing-library": "^7.0.1"
+    "prettier": "^2.3.1"
   },
   "dependencies": {
     "@babel/node": "^7.14.5",
@@ -45,8 +43,7 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4"
+    "react-dom": "^17.0.2"
   },
   "browserslist": [
     "last 2 Chrome versions",
